# anime-recommender-combined

./: .gitignore  Dockerfile  README.md  anime_gradio_ui.py  llm-k8s.yaml  pyproject.toml  requirements.txt  setup.py
app/: app.py
data/: DATA_SETUP.md  anime.csv
pipeline/: build_pipeline.py  pipeline.py
src/: data_loader.py  prompt_template.py  recommender.py  vector_store.py
