[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anime-recommender-combined"
version = "1.0.0"
authors = [
    { name = "Shrikant" }
]
description = "Combined Anime Recommendation System — LLM (Groq+ChromaDB) + TF-IDF Cosine Similarity"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools]
packages = { find = {} }
